@@ -1,7 +1,7 @@
 Summary: Mezzanine -- A Software Product Management System
 Name: mezzanine
 Version: 1.5
-Release: 0.11
+Release: 0.12
 Copyright: BSD
 Group: Development/Tools
 Source: %{name}.tar.gz
@@ -62,7 +62,7 @@ done
     ln -s revtool mz$i
     echo ".so revtool.1" > $RPM_BUILD_ROOT%{_mandir}/man1/mz$i.1
   done
-  for i in import prep mod merge patch clean sync mv ; do
+  for i in import prep merge patch clean sync mv ; do
     ln -s srctool mz$i
     echo ".so srctool.1" > $RPM_BUILD_ROOT%{_mandir}/man1/mz$i.1
   done
